--- a/css/estilo.css
+++ b/css/estilo.css
@@ -37,28 +37,19 @@
 	line-height: 28pt;
 	box-sizing:border-box;
 }
-/*
-@keyframes mover{
-    0%{
-       width: 100px;
-    }
-    100%{
-        width: 120px;
-    }
-}
-*/
+
 /* Para px */
 @media only screen and (max-width: 1500px) and (min-width: 981px) {
-    /*
+
         .grid-sub-container{
             background-color: orange !important;
         }
-    */
-    }
+
+}
     /* Para 960px */
 @media only screen and (max-width: 980px) and (min-width: 821px) {
     .grid-sub-container{
-    /*background-color: purple !important;*/
+    background-color: purple !important;
     display: grid !important;
     grid-template-columns: 460px 460px !important;
     justify-content: center !important;
@@ -70,7 +61,7 @@
 /* Para 800px */
 @media only screen and (max-width: 820px) and (min-width: 621px) {
     .grid-sub-container{
-        /*background-color: red !important;*/
+        background-color: red !important;
         display: grid !important;
         grid-template-columns: 380px 380px !important;
         justify-content: center !important;
@@ -86,13 +77,13 @@
 /* Para 600px */
 @media only screen and (max-width: 620px) and (min-width: 501px) {
     .grid-sub-container{
-        /*background-color: yellow !important;*/
+        background-color: yellow !important;
     }
 }
 
 /* Para 480px */
 @media only screen and (max-width: 500px) and (min-width: 341px) {
-	
+
 	#responsive-titulo{
 		padding: 50px 50px 150px 50px !important;
 	}
@@ -144,10 +135,15 @@
         max-width: 400px !important;
     }
 
-
     #sec2{
         height: 1000px !important;
         max-width: 400px !important;
+    }
+
+    #plantaFt2{
+        width: 30px !important;
+        top: 106% !important;
+        left: 20% !important;
     }
 
     /* ------------ 3 ------------ */
@@ -341,7 +337,7 @@
 /* Para 320px */
 @media only screen and (max-width: 340px) and (min-width: 5px)  {
     .grid-sub-container{
-        /*background-color: pink !important;*/
+        background-color: pink !important;
     }
 }
 
@@ -442,6 +438,7 @@
 
 
 /* ------------ 2 ------------ */
+
 #plantaFt2{
     animation: ft2-movi-1 2s alternate infinite ease-in;
 }
